Fixed Main Header title alignment for mobile.

--- a/src/components/MainHeader/MainHeader.scss
+++ b/src/components/MainHeader/MainHeader.scss
@@ -19,7 +19,10 @@
 	&__title {
 		display: flex;
 		flex-direction: row;
-		align-self: center;
 		gap: 0.5rem;
+
+		@include tabletStyle {
+			align-self: center;
+		}
 	}
 }
